kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visibilityreportapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visibilityreportapi
  template:
    metadata:
      labels:
        app: visibilityreportapi
    spec:
      containers:
      - name: visibilityreportapi
        image: ghcr.io/halcyon-au/the-visibility-report-api:main
        imagePullPolicy: Always
        ports:
          - containerPort: 1323
        command: ["sh", "./start.sh"]
      imagePullSecrets:
        - name: dockerconfigjson-github-com
