kubernetes/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visibilityreportapi-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visibilityreportapi-worker
  template:
    metadata:
      labels:
        app: visibilityreportapi-worker
    spec:
      containers:
      - name: visibilityreportapi-worker
        image: ghcr.io/halcyon-au/the-visibility-report-api:main
        imagePullPolicy: Always
        ports:
          - containerPort: 1323
        command: ["sh", "./start.sh", "worker"]
      imagePullSecrets:
        - name: dockerconfigjson-github-com
