kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visibilityreportapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-api"
spec:
  tls:
  - hosts:
    - api.visibilityreport.techytechster.com
    secretName: visibilityreportapi-tls
  rules:
  - host: api.visibilityreport.techytechster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visibilityreportapi-service
            port:
              number: 1323
